parser.output
   0  $accept : %entry% $end

   1  expr : expr PLUS expr
   2       | expr MINUS expr
   3       | expr TIMES expr
   4       | expr DIVIDE expr
   5       | expr COMPEQ expr
   6       | expr COMPLT expr
   7       | expr COMPLEQ expr
   8       | expr COMPGT expr
   9       | expr COMPGEQ expr
  10       | expr COMPNEQ expr
  11       | expr RSHIFT expr
  12       | expr LSHIFT expr
  13       | expr BITAND expr
  14       | expr BITOR expr
  15       | expr XOR expr
  16       | expr ASSIGN expr
  17       | expr ADDEQUAL expr
  18       | expr MINUSEQUAL expr
  19       | expr TIMESEQUAL expr
  20       | expr DIVEQUAL expr
  21       | LPAREN MINUS expr RPAREN
  22       | BITNOT expr
  23       | NOT expr
  24       | expr NOT
  25       | expr OCTOTHORPE
  26       | LPAREN typ_decl RPAREN expr
  27       | INT_LIT
  28       | BOOL_LIT
  29       | STRING_LIT
  30       | FLOAT_LIT
  31       | CHAR_LIT
  32       | id
  33       | LBRACKET expr_list_opt RBRACKET
  34       | id ADDHEAD ASSIGN expr
  35       | id ADDTAIL ASSIGN expr
  36       | expr CONCAT expr
  37       | expr LENGTH
  38       | expr PROBCOLON expr
  39       | ID LPAREN args_opt RPAREN
  40       | LPAREN expr RPAREN

  41  id : ID
  42     | list_elt

  43  list_elt : ID index index_list_opt

  44  index : LBRACKET expr RBRACKET

  45  index_list_opt :
  46                 | index index_list_opt

  47  expr_opt :
  48           | expr

  49  expr_list_opt :
  50                | expr_list

  51  expr_list : expr
  52            | expr_list COMMA expr

  53  args_opt :
  54           | args_list

  55  args_list : expr
  56            | args_list COMMA expr

  57  stmt : expr SEMICOLON
  58       | BREAK SEMICOLON
  59       | CONTINUE SEMICOLON
  60       | RETURN expr_opt SEMICOLON
  61       | if_stmt
  62       | if_stmt ELSE block
  63       | if_stmt elif elif_list
  64       | if_stmt elif elif_list ELSE block
  65       | FOR LPAREN expr_opt SEMICOLON expr_opt SEMICOLON expr_opt SEMICOLON RPAREN block
  66       | WHILE LPAREN expr RPAREN block

  67  if_stmt : IF LPAREN expr RPAREN block

  68  elif : ELIF LPAREN expr RPAREN block

  69  block : LBRACE stmt_list RBRACE

  70  stmt_list :
  71            | stmt_list stmt

  72  elif_list :
  73            | elif elif_list

  74  program : decls EOF

  75  decls :
  76        | decls vdecl
  77        | decls fdecl

  78  fdecl : typ_decl ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  79  formals_opt :
  80              | formal_list

  81  formal_list : typ_decl ID
  82              | formal_list COMMA typ_decl ID

  83  vdecl_list :
  84             | vdecl_list vdecl

  85  vdecl : typ_decl ID SEMICOLON
  86        | typ_decl ID ASSIGN expr SEMICOLON

  87  typ_decl : spec_qual_list

  88  typ_spec : INT
  89           | BOOL
  90           | FLOAT
  91           | VOID
  92           | CHAR
  93           | STRING

  94  typ_qual : PROB
  95           | LIST

  96  spec_qual_list : typ_spec spec_qual_list_opt
  97                 | typ_qual spec_qual_list

  98  spec_qual_list_opt :
  99                     | spec_qual_list

 100  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (100)
	decls : .  (75)

	.  reduce 75

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (100)

	.  reduce 100


state 4
	program : decls . EOF  (74)
	decls : decls . vdecl  (76)
	decls : decls . fdecl  (77)

	EOF  shift 5
	INT  shift 6
	CHAR  shift 7
	BOOL  shift 8
	STRING  shift 9
	FLOAT  shift 10
	PROB  shift 11
	LIST  shift 12
	VOID  shift 13
	.  error

	typ_decl  goto 14
	vdecl  goto 15
	fdecl  goto 16
	spec_qual_list  goto 17
	typ_spec  goto 18
	typ_qual  goto 19


state 5
	program : decls EOF .  (74)

	.  reduce 74


state 6
	typ_spec : INT .  (88)

	.  reduce 88


state 7
	typ_spec : CHAR .  (92)

	.  reduce 92


state 8
	typ_spec : BOOL .  (89)

	.  reduce 89


state 9
	typ_spec : STRING .  (93)

	.  reduce 93


state 10
	typ_spec : FLOAT .  (90)

	.  reduce 90


state 11
	typ_qual : PROB .  (94)

	.  reduce 94


state 12
	typ_qual : LIST .  (95)

	.  reduce 95


state 13
	typ_spec : VOID .  (91)

	.  reduce 91


state 14
	fdecl : typ_decl . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (78)
	vdecl : typ_decl . ID SEMICOLON  (85)
	vdecl : typ_decl . ID ASSIGN expr SEMICOLON  (86)

	ID  shift 20
	.  error


state 15
	decls : decls vdecl .  (76)

	.  reduce 76


state 16
	decls : decls fdecl .  (77)

	.  reduce 77


state 17
	typ_decl : spec_qual_list .  (87)

	.  reduce 87


state 18
	spec_qual_list : typ_spec . spec_qual_list_opt  (96)
	spec_qual_list_opt : .  (98)

	INT  shift 6
	CHAR  shift 7
	BOOL  shift 8
	STRING  shift 9
	FLOAT  shift 10
	PROB  shift 11
	LIST  shift 12
	VOID  shift 13
	RPAREN  reduce 98
	ID  reduce 98

	spec_qual_list  goto 21
	typ_spec  goto 18
	typ_qual  goto 19
	spec_qual_list_opt  goto 22


state 19
	spec_qual_list : typ_qual . spec_qual_list  (97)

	INT  shift 6
	CHAR  shift 7
	BOOL  shift 8
	STRING  shift 9
	FLOAT  shift 10
	PROB  shift 11
	LIST  shift 12
	VOID  shift 13
	.  error

	spec_qual_list  goto 23
	typ_spec  goto 18
	typ_qual  goto 19


state 20
	fdecl : typ_decl ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (78)
	vdecl : typ_decl ID . SEMICOLON  (85)
	vdecl : typ_decl ID . ASSIGN expr SEMICOLON  (86)

	ASSIGN  shift 24
	SEMICOLON  shift 25
	LPAREN  shift 26
	.  error


state 21
	spec_qual_list_opt : spec_qual_list .  (99)

	.  reduce 99


state 22
	spec_qual_list : typ_spec spec_qual_list_opt .  (96)

	.  reduce 96


state 23
	spec_qual_list : typ_qual spec_qual_list .  (97)

	.  reduce 97


state 24
	vdecl : typ_decl ID ASSIGN . expr SEMICOLON  (86)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	NOT  shift 30
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	.  error

	expr  goto 37
	id  goto 38
	list_elt  goto 39


state 25
	vdecl : typ_decl ID SEMICOLON .  (85)

	.  reduce 85


state 26
	fdecl : typ_decl ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (78)
	formals_opt : .  (79)

	INT  shift 6
	CHAR  shift 7
	BOOL  shift 8
	STRING  shift 9
	FLOAT  shift 10
	PROB  shift 11
	LIST  shift 12
	VOID  shift 13
	RPAREN  reduce 79

	typ_decl  goto 40
	formals_opt  goto 41
	formal_list  goto 42
	spec_qual_list  goto 17
	typ_spec  goto 18
	typ_qual  goto 19


state 27
	expr : LBRACKET . expr_list_opt RBRACKET  (33)
	expr_list_opt : .  (49)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	NOT  shift 30
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	RBRACKET  reduce 49

	expr  goto 43
	id  goto 38
	expr_list_opt  goto 44
	list_elt  goto 39
	expr_list  goto 45


state 28
	expr : LPAREN . MINUS expr RPAREN  (21)
	expr : LPAREN . typ_decl RPAREN expr  (26)
	expr : LPAREN . expr RPAREN  (40)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	MINUS  shift 46
	NOT  shift 30
	INT  shift 6
	CHAR  shift 7
	BOOL  shift 8
	STRING  shift 9
	FLOAT  shift 10
	PROB  shift 11
	LIST  shift 12
	VOID  shift 13
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	.  error

	expr  goto 47
	typ_decl  goto 48
	id  goto 38
	list_elt  goto 39
	spec_qual_list  goto 17
	typ_spec  goto 18
	typ_qual  goto 19


state 29
	expr : BITNOT . expr  (22)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	NOT  shift 30
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	.  error

	expr  goto 49
	id  goto 38
	list_elt  goto 39


state 30
	expr : NOT . expr  (23)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	NOT  shift 30
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	.  error

	expr  goto 50
	id  goto 38
	list_elt  goto 39


state 31
	expr : BOOL_LIT .  (28)

	.  reduce 28


state 32
	expr : INT_LIT .  (27)

	.  reduce 27


state 33
	expr : CHAR_LIT .  (31)

	.  reduce 31


state 34
	expr : FLOAT_LIT .  (30)

	.  reduce 30


state 35
	expr : STRING_LIT .  (29)

	.  reduce 29


state 36
	expr : ID . LPAREN args_opt RPAREN  (39)
	id : ID .  (41)
	list_elt : ID . index index_list_opt  (43)

	LBRACKET  shift 51
	LPAREN  shift 52
	ASSIGN  reduce 41
	SEMICOLON  reduce 41
	PROBCOLON  reduce 41
	COMMA  reduce 41
	RBRACKET  reduce 41
	RPAREN  reduce 41
	BITAND  reduce 41
	BITOR  reduce 41
	XOR  reduce 41
	CONCAT  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	RSHIFT  reduce 41
	LSHIFT  reduce 41
	ADDEQUAL  reduce 41
	MINUSEQUAL  reduce 41
	TIMESEQUAL  reduce 41
	DIVEQUAL  reduce 41
	NOT  reduce 41
	LENGTH  reduce 41
	OCTOTHORPE  reduce 41
	ADDHEAD  reduce 41
	ADDTAIL  reduce 41
	COMPEQ  reduce 41
	COMPLT  reduce 41
	COMPLEQ  reduce 41
	COMPGT  reduce 41
	COMPGEQ  reduce 41
	COMPNEQ  reduce 41

	index  goto 53


state 37
	expr : expr . PLUS expr  (1)
	expr : expr . MINUS expr  (2)
	expr : expr . TIMES expr  (3)
	expr : expr . DIVIDE expr  (4)
	expr : expr . COMPEQ expr  (5)
	expr : expr . COMPLT expr  (6)
	expr : expr . COMPLEQ expr  (7)
	expr : expr . COMPGT expr  (8)
	expr : expr . COMPGEQ expr  (9)
	expr : expr . COMPNEQ expr  (10)
	expr : expr . RSHIFT expr  (11)
	expr : expr . LSHIFT expr  (12)
	expr : expr . BITAND expr  (13)
	expr : expr . BITOR expr  (14)
	expr : expr . XOR expr  (15)
	expr : expr . ASSIGN expr  (16)
	expr : expr . ADDEQUAL expr  (17)
	expr : expr . MINUSEQUAL expr  (18)
	expr : expr . TIMESEQUAL expr  (19)
	expr : expr . DIVEQUAL expr  (20)
	expr : expr . NOT  (24)
	expr : expr . OCTOTHORPE  (25)
	expr : expr . CONCAT expr  (36)
	expr : expr . LENGTH  (37)
	expr : expr . PROBCOLON expr  (38)
	vdecl : typ_decl ID ASSIGN expr . SEMICOLON  (86)

	ASSIGN  shift 54
	SEMICOLON  shift 55
	PROBCOLON  shift 56
	BITAND  shift 57
	BITOR  shift 58
	XOR  shift 59
	CONCAT  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	RSHIFT  shift 65
	LSHIFT  shift 66
	ADDEQUAL  shift 67
	MINUSEQUAL  shift 68
	TIMESEQUAL  shift 69
	DIVEQUAL  shift 70
	NOT  shift 71
	LENGTH  shift 72
	OCTOTHORPE  shift 73
	COMPEQ  shift 74
	COMPLT  shift 75
	COMPLEQ  shift 76
	COMPGT  shift 77
	COMPGEQ  shift 78
	COMPNEQ  shift 79
	.  error


state 38
	expr : id .  (32)
	expr : id . ADDHEAD ASSIGN expr  (34)
	expr : id . ADDTAIL ASSIGN expr  (35)

	ADDHEAD  shift 80
	ADDTAIL  shift 81
	ASSIGN  reduce 32
	SEMICOLON  reduce 32
	PROBCOLON  reduce 32
	COMMA  reduce 32
	RBRACKET  reduce 32
	RPAREN  reduce 32
	BITAND  reduce 32
	BITOR  reduce 32
	XOR  reduce 32
	CONCAT  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	TIMES  reduce 32
	DIVIDE  reduce 32
	RSHIFT  reduce 32
	LSHIFT  reduce 32
	ADDEQUAL  reduce 32
	MINUSEQUAL  reduce 32
	TIMESEQUAL  reduce 32
	DIVEQUAL  reduce 32
	NOT  reduce 32
	LENGTH  reduce 32
	OCTOTHORPE  reduce 32
	COMPEQ  reduce 32
	COMPLT  reduce 32
	COMPLEQ  reduce 32
	COMPGT  reduce 32
	COMPGEQ  reduce 32
	COMPNEQ  reduce 32


state 39
	id : list_elt .  (42)

	.  reduce 42


state 40
	formal_list : typ_decl . ID  (81)

	ID  shift 82
	.  error


state 41
	fdecl : typ_decl ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (78)

	RPAREN  shift 83
	.  error


state 42
	formals_opt : formal_list .  (80)
	formal_list : formal_list . COMMA typ_decl ID  (82)

	COMMA  shift 84
	RPAREN  reduce 80


state 43
	expr : expr . PLUS expr  (1)
	expr : expr . MINUS expr  (2)
	expr : expr . TIMES expr  (3)
	expr : expr . DIVIDE expr  (4)
	expr : expr . COMPEQ expr  (5)
	expr : expr . COMPLT expr  (6)
	expr : expr . COMPLEQ expr  (7)
	expr : expr . COMPGT expr  (8)
	expr : expr . COMPGEQ expr  (9)
	expr : expr . COMPNEQ expr  (10)
	expr : expr . RSHIFT expr  (11)
	expr : expr . LSHIFT expr  (12)
	expr : expr . BITAND expr  (13)
	expr : expr . BITOR expr  (14)
	expr : expr . XOR expr  (15)
	expr : expr . ASSIGN expr  (16)
	expr : expr . ADDEQUAL expr  (17)
	expr : expr . MINUSEQUAL expr  (18)
	expr : expr . TIMESEQUAL expr  (19)
	expr : expr . DIVEQUAL expr  (20)
	expr : expr . NOT  (24)
	expr : expr . OCTOTHORPE  (25)
	expr : expr . CONCAT expr  (36)
	expr : expr . LENGTH  (37)
	expr : expr . PROBCOLON expr  (38)
	expr_list : expr .  (51)

	ASSIGN  shift 54
	PROBCOLON  shift 56
	BITAND  shift 57
	BITOR  shift 58
	XOR  shift 59
	CONCAT  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	RSHIFT  shift 65
	LSHIFT  shift 66
	ADDEQUAL  shift 67
	MINUSEQUAL  shift 68
	TIMESEQUAL  shift 69
	DIVEQUAL  shift 70
	NOT  shift 71
	LENGTH  shift 72
	OCTOTHORPE  shift 73
	COMPEQ  shift 74
	COMPLT  shift 75
	COMPLEQ  shift 76
	COMPGT  shift 77
	COMPGEQ  shift 78
	COMPNEQ  shift 79
	COMMA  reduce 51
	RBRACKET  reduce 51


state 44
	expr : LBRACKET expr_list_opt . RBRACKET  (33)

	RBRACKET  shift 85
	.  error


state 45
	expr_list_opt : expr_list .  (50)
	expr_list : expr_list . COMMA expr  (52)

	COMMA  shift 86
	RBRACKET  reduce 50


state 46
	expr : LPAREN MINUS . expr RPAREN  (21)

	LBRACKET  shift 27
	LPAREN  shift 28
	BITNOT  shift 29
	NOT  shift 30
	BOOL_LIT  shift 31
	INT_LIT  shift 32
	CHAR_LIT  shift 33
	FLOAT_LIT  shift 34
	STRING_LIT  shift 35
	ID  shift 36
	.  error

	expr  goto 87
	id  goto 38
	list_elt  goto 39


state 47
	expr : expr . PLUS expr  (1)
	expr : expr . MINUS expr  (2)
	expr : expr . TIMES expr  (3)
	expr : expr . DIVIDE expr  (4)
	expr : expr . COMPEQ expr  (5)
	expr : expr . COMPLT expr  (6)
	expr : expr . COMPLEQ expr  (7)
	expr : expr . COMPGT expr  (8)
	expr : expr . COMPGEQ expr  (9)
	expr : expr . COMPNEQ expr  (10)
	expr : expr . RSHIFT expr  (11)
	expr : expr . LSHIFT expr  (12)
	expr : expr . BITAND expr  (13)
	expr : expr . BITOR expr  (14)
	expr : expr . XOR expr  (15)
	expr : expr . ASSIGN expr  (16)
	expr : expr . ADDEQUAL expr  (17)
	expr : expr . MINUSEQUAL expr  (18)
	expr : expr . TIMESEQUAL expr  (19)
	expr : expr . DIVEQUAL expr  (20)
	expr : expr . NOT  (24)
	expr : expr . OCTOTHORPE  (25)
	expr : expr . CONCAT expr  (36)
	expr : expr . LENGTH  (37)
	expr : expr . PROBCOLON expr  (38)
	expr : LPAREN expr . RPAREN  (40)

	ASSIGN  shift 54
	PROBCOLON  shift 56
	RPAREN  shift 88
	BITAND  shift 57
	BITOR  shift 58
	XOR  shift 59
	CONCAT  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	RSHIFT  shift 65
	LSHIFT  shift 66
	ADDEQUAL  shift 67
	MINUSEQUAL  shift 68
	TIMESEQUAL  shift 69
	DIVEQUAL  shift 70
	NOT  shift 71
	LENGTH  shift 72
	OCTOTHORPE  shift 73
	COMPEQ  shift 74
	COMPLT  shift 75
	COMPLEQ  shift 76
	COMPGT  shift 77
	COMPGEQ  shift 78
	COMPNEQ  shift 79
	.  error


state 48
	expr : LPAREN typ_decl . RPAREN expr  (26)

	RPAREN  shift 89
	.  error


state 49
	expr : expr . PLUS expr  (1)
	expr : expr . MINUS expr  (2)
	expr : expr . TIMES expr  (3)
	expr : expr . DIVIDE expr  (4)
	expr : expr . COMPEQ expr  (5)
	expr : expr . COMPLT expr  (6)
	expr : expr . COMPLEQ expr  (7)
	expr : expr . COMPGT expr  (8)
	expr : expr . COMPGEQ expr  (9)
	expr : expr . COMPNEQ expr  (10)
	expr : expr . RSHIFT expr  (11)
	expr : expr . LSHIFT expr  (12)
	expr : expr . BITAND expr  (13)
	expr : expr . BITOR expr  (14)
	expr : expr . XOR expr  (15)
	expr : expr . ASSIGN expr  (16)
	expr : expr . ADDEQUAL expr  (17)
	expr : expr . MINUSEQUAL expr  (18)
	expr : expr . TIMESEQUAL expr  (19)
	expr : expr . DIVEQUAL expr  (20)
	expr : BITNOT expr .  (22)
	expr : expr . NOT  (24)
	expr : expr . OCTOTHORPE  (25)
	expr : expr . CONCAT expr  (36)
	expr : expr . LENGTH  (37)
	expr : expr . PROBCOLON expr  (38)

	NOT  shift 71
	LENGTH  shift 72
	OCTOTHORPE  shift 73
	ASSIGN  reduce 22
	SEMICOLON  reduce 22
	PROBCOLON  reduce 22
	COMMA  reduce 22
	RBRACKET  reduce 22
	RPAREN  reduce 22
	BITAND  reduce 22
	BITOR  reduce 22
	XOR  reduce 22
	CONCAT  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	TIMES  reduce 22
	DIVIDE  reduce 22
	RSHIFT  reduce 22
	LSHIFT  reduce 22
	ADDEQUAL  reduce 22
	MINUSEQUAL  reduce 22
	TIMESEQUAL  reduce 22
	DIVEQUAL  reduce 22
	COMPEQ  reduce 22
	COMPLT  reduce 22
	COMPLEQ  reduce 22
	COMPGT  reduce 22
	COMPGEQ  reduce 22
	COMPNEQ  reduce 22


state 50
	expr : expr . PLUS expr  (1)
	expr : expr . MINUS expr  (2)
	expr : expr . TIMES expr  (3)
	expr : expr . DIVIDE expr  (4)
	expr : expr . COMPEQ expr  (5)
	expr : expr . COMPLT expr  (6)
	expr : expr . COMPLEQ expr  (7)
	expr : expr . COMPGT expr  (8)
	expr : expr . COMPGEQ expr  (9)
	expr : expr . COMPNEQ expr  (10)
	expr : expr . RSHIFT expr  (11)
	expr : expr . LSHIFT expr  (12)
	expr : expr . BITAND expr  (13)
	expr : expr . BITOR expr  (14)
	expr : expr . XOR expr  (15)
	expr : expr . ASSIGN expr  (16)
	expr : expr . ADDEQUAL expr  (17)
	expr : expr . MINUSEQUAL expr  (18)
	expr : expr . TIMESEQUAL expr  (19)
	expr : expr . DIVEQUAL expr  (20)
	expr : NOT expr .  (23)
	expr : expr . NOT  (24)
	expr : expr . OCTOTHORPE  (25)
	expr : expr . CONCAT expr  (36)
	expr : expr . LENGTH  (37)
	expr : expr . PROBCOLON expr  (38)
